--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -2,6 +2,7 @@
 @import url('./components/forms.css');
 @import url('./components/cards.css');
 @import url('./components/typography.css');
+@import url('./components/images.css');
 
 :root {
   --primary: #6366f1;
