--- a/templates/setup.html
+++ b/templates/setup.html
@@ -1,16 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}Setup{% endblock %}
-
 {% block content %}
 <h1>Exquisite Corpse</h1>
-<p>A collaborative storytelling game where each player contributes to a story without seeing previous contributions.</p>
+<p>A collaborative writing experience!</p>
 
 <form method="POST">
   <div class="form-group">
     <label for="player_count">Number of Players:</label>
-    <input type="number" id="player_count" name="player_count" min="2" max="10" value="3">
+    <input type="number" id="player_count" name="player_count" min="2" max="10" value="3" required>
   </div>
-  <button type="submit" class="btn btn-block">Start Game</button>
+  <button type="submit" class="btn btn-block">Create Game</button>
 </form>
 {% endblock %}
