--- a/templates/result.html
+++ b/templates/result.html
@@ -8,7 +8,7 @@
 
 {% if image_url %}
 <div class="story-image">
-  <img src="{{ url_for('uploaded_file', filename=image_url) }}" alt="Story Image">
+  <img src="{{ image_url }}" alt="Story Image">
 </div>
 {% endif %}
 
